apps/workloads/jellyseerr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  type: ClusterIP
  selector:
    app: jellyseerr
  ports:
    - name: http
      port: 80
      targetPort: 5055
